objects/CN_Chef_UT_Item__c.object
<CustomObject>
    <fields>
        <fullName>CN_Chef_UT_OFF__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Chef UT OFF</label>
        <referenceTo>CN_Chef_UT_OFF__c</referenceTo>
        <relationshipLabel>Chef UT Items</relationshipLabel>
        <relationshipName>Chef_UT_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Chefs_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chefs Assigned</label>
        <referenceTo>CN_Chefs_Assigned__c</referenceTo>
        <relationshipLabel>Chef UT Items</relationshipLabel>
        <relationshipName>Chef_UT_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Event_Type__c</fullName>
        <formula>CN_Chefs_Assigned__r.CN_Event_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Is_Confirmed__c</fullName>
        <formula>CN_Chefs_Assigned__r.CN_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Work_Days__c</fullName>
        <formula>IF(CN_Chefs_Assigned__r.CN_Is_Work_Date_within_Same_Month__c, CN_Chefs_Assigned__r.CN_Chef_Working_Days__c , IF( CN_Year_Month__c =  CN_Chefs_Assigned__r.CN_Start_Date_Year_Month__c , CN_Chefs_Assigned__r.CN_Start_Date_to_Month_End_Days__c , CN_Chefs_Assigned__r.CN_End_Date_to_Month_Start_Days__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Year_Month__c</fullName>
        <label>Year Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chef UT Item</label>
    <nameField>
        <displayFormat>CUI-{0000000000}</displayFormat>
        <label>Chef UT Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chef UT Items</pluralLabel>
    <recordTypes>
        <fullName>CN_Chef_UT_Item</fullName>
        <active>true</active>
        <label>CN Chef UT Item</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>